reduced units for Mori Zwanzig example

--- a/examples/applications/Mori-Zwanzig/Mori-Zwanzig.ipynb
+++ b/examples/applications/Mori-Zwanzig/Mori-Zwanzig.ipynb
@@ -20,7 +20,36 @@
     "import msmrd2\n",
     "import msmrd2.visualization as msmrdvis\n",
     "from msmrd2.integrators import langevin \n",
-    "from msmrd2.potentials import WCA, harmonic"
+    "from msmrd2.potentials import WCA, harmonic\n",
+    "import msmrd2.tools.particleTools as particleTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Units\n",
+    "\n",
+    "### Boltzman constant\n",
+    "- $k_B = 1.38064852 \\times 10^{-23} \\frac{m^2}{s^2} \\frac{kg}{K} \\left(= \\frac{nm^2}{ns^2}\\frac{kg}{K}\\right)$.\n",
+    "\n",
+    "### Basic units\n",
+    "- Length (l): nanometers (nm)\n",
+    "- Energy ($\\epsilon$) : $k_B T = (g/mol) \\frac{nm^2}{ns^2}=1$\n",
+    "- Mass (m): gram/mol (g/mol)\n",
+    "\n",
+    "### Derived units\n",
+    "- Time: $l\\sqrt{m/\\epsilon} = nm$\n",
+    "- Temperature: $\\epsilon/k_B =$ Kelvin ($K$)\n",
+    "- Force: $\\epsilon/l = kg \\frac{nm}{ns^2}$\n",
+    "\n",
+    "### Reduced quantities (dimensionless)\n",
+    "- Reduced pair potential: $U^* = U/\\epsilon$\n",
+    "- Reduced force: $F^* = F l/\\epsilon$\n",
+    "- Reduced distance: $r^* = r/l$\n",
+    "- Reduced density: $\\rho^*=\\rho l^3$\n",
+    "- Reduced Temperature: $T^* = k_B T/\\epsilon$\n",
+    "- Reduced Pressure: $P^* = Pl^3/\\epsilon$"
    ]
   },
   {
@@ -29,46 +58,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define arbitrarily large list of particles\n",
-    "np.random.seed(seed=1)\n",
-    "numBathParticles = 250 #500\n",
+    "# Main parameters\n",
+    "numBathParticles = 500 #500\n",
     "numparticles = 1 + numBathParticles #Added distinguished particle (index 0)\n",
-    "boxsize = 25\n",
-    "D = 0.1 \n",
-    "mass = 1.0\n",
-    "velocity = np.zeros(3)\n",
-    "pyPartlist = [] \n",
-    "for i in range(numparticles):\n",
-    "    overlap = True\n",
-    "    while overlap:\n",
-    "        if i==0:\n",
-    "            position = np.array([0,0,0]) # distinguished particle always at origin\n",
-    "        else:\n",
-    "            position = np.array([boxsize*np.random.rand()-0.5*boxsize,\n",
-    "                                 boxsize*np.random.rand()-0.5*boxsize,\n",
-    "                                 boxsize*np.random.rand()-0.5*boxsize])\n",
-    "        overlap = False     \n",
-    "        for j in range(len(pyPartlist)):\n",
-    "            if np.linalg.norm(position - pyPartlist[j].position) < 3.0:\n",
-    "                overlap = True\n",
-    "                continue\n",
-    "                \n",
-    "    \n",
-    "    part = msmrd2.particle(D, position, velocity, mass)\n",
-    "    if i==0:\n",
-    "        part.setType(1) # distinguished particle\n",
-    "    pyPartlist.append(part)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create list of particles that can be read from msmrd\n",
-    "# note the particles in this list will be independent from the python list.\n",
-    "partlist = msmrd2.integrators.particleList(pyPartlist)"
+    "D = 1.0E-3 #(nm^2/ns) Note 1.0E-3 nm^2/ns = 1 micrometer^2/s #0.1\n",
+    "particlemass = 18.0 # (g/mol) approximately mass of H20\n",
+    "distinguishedParticleMass = 3 * particlemass # (kg)\n",
+    "numSimulations = 500 #250 #500\n",
+    "boxsize = 8\n",
+    "particleDiameter = 0.3 #nm\n",
+    "separationDistance = 2*particleDiameter # minimum separation distance for initial condition\n",
+    "# For computations, we assume KbT=1, thus the force F must be: F=KbT f, where f is the force computed\n",
+    "# from the potential. This means the plotted potential is on reduced units (not the distances though);\n",
+    "KbT = 1\n",
+    "seed = -1 # Seed = -1 used random device as seed\n",
+    "\n",
+    "# Define arbitrarily large list of particles (velocities assumed zero at initial position)\n",
+    "partlist = particleTools.randomLangevinParticleList(numparticles, boxsize, separationDistance, D,\n",
+    "                                                        particlemass, seed, distinguishedParticleOrigin=True)\n",
+    "# Set distinguished particle (default type is zero)\n",
+    "partlist[0].setType(1)\n",
+    "partlist[0].setMass(distinguishedParticleMass)"
    ]
   },
   {
@@ -78,10 +88,11 @@
    "outputs": [],
    "source": [
     "# Over-damped Langevin integrator definition\n",
-    "dt = 0.005\n",
+    "dt = 0.1\n",
     "seed = -1 # Seed = -1 used random device as seed\n",
     "bodytype = 'point'\n",
-    "integrator = langevin(dt, seed, bodytype) "
+    "integrator = langevin(dt, seed, bodytype) \n",
+    "integrator.setKbT(KbT)"
    ]
   },
   {
@@ -104,7 +115,7 @@
    "source": [
     "# Define WCA potential (rm=2^(1/6)sigma)\n",
     "epsilon = 1.0\n",
-    "rm = 1.0\n",
+    "rm = particleDiameter\n",
     "sigma = rm * 2**(-1/6)\n",
     "forceCapVal = 100.0\n",
     "potentialWCA = WCA(epsilon, sigma)\n",
@@ -120,7 +131,7 @@
    "source": [
     "# Define external potential\n",
     "minima = np.array([0.,0.,0.])\n",
-    "kconstant = np.array([0.1,0.1,0.1])\n",
+    "kconstant = np.array([0.05,0.05,0.05])\n",
     "partTypes = [1] # Only acts on particle types one\n",
     "scalefactor = 1\n",
     "externalPotential = harmonic(minima, kconstant, partTypes, scalefactor)\n",
@@ -163,7 +174,8 @@
    "source": [
     "# Generate TCL script to visualize with VMD\n",
     "msmrdvis.generateTCL_MoriZwanzig(numparticles = numparticles, outfname = \"MoriZwanzig\", \n",
-    "                              tclfname = \"../../../data/vmd/MoriZwanzig_2vmd.tcl\")"
+    "                              tclfname = \"../../../data/vmd/MoriZwanzig_2vmd.tcl\", \n",
+    "                                 particleDiameter = particleDiameter)"
    ]
   },
   {
