Implemented ABOBA algorithm for MoriZ

--- a/examples/applications/Mori-Zwanzig/Mori-Zwanzig.ipynb
+++ b/examples/applications/Mori-Zwanzig/Mori-Zwanzig.ipynb
@@ -88,10 +88,11 @@
    "outputs": [],
    "source": [
     "# Over-damped Langevin integrator definition\n",
-    "dt = 0.2\n",
+    "dt = 0.05 #0.2\n",
     "seed = -1 # Seed = -1 used random device as seed\n",
     "bodytype = 'point'\n",
-    "integrator = langevin(dt, seed, bodytype) \n",
+    "integratorScheme = 'ABOBA' # BAOAB default\n",
+    "integrator = langevin(dt, seed, bodytype, integratorScheme) \n",
     "integrator.setKbT(KbT)"
    ]
   },
@@ -131,7 +132,7 @@
    "source": [
     "# Define external potential\n",
     "minima = np.array([0.,0.,0.])\n",
-    "kconstant = np.array([0.05,0.05,0.05])\n",
+    "kconstant = np.array([0.3,0.3,0.3])\n",
     "partTypes = [1] # Only acts on particle types one\n",
     "scalefactor = 1\n",
     "externalPotential = harmonic(minima, kconstant, partTypes, scalefactor)\n",
@@ -145,8 +146,8 @@
    "outputs": [],
    "source": [
     "# Integrate the particles, save to .xyz to produce VMD output (additional overhead)\n",
-    "timesteps = 20000\n",
-    "stride = 10\n",
+    "timesteps = 2000\n",
+    "stride = 5\n",
     "datafile  = open('../../../data/vmd/MoriZwanzig.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
