--- a/examples/tests/plotEnergyTemperature.ipynb
+++ b/examples/tests/plotEnergyTemperature.ipynb
@@ -60,17 +60,17 @@
     "# Main parameters\n",
     "numBathParticles = 100 \n",
     "numparticles = 1 + numBathParticles #Added distinguished particle (index 0)\n",
-    "D = 3.0E-2 #1.0E-3 #(nm^2/ns) Note 1.0E-3 nm^2/ns = 1 micrometer^2/s #0.1\n",
+    "D = 3.0E-2 #3.0E-2 #3.0E-2 #1.0E-3 #(nm^2/ns) Note 1.0E-3 nm^2/ns = 1 micrometer^2/s #0.1\n",
     "particlemass = 18.0 # (g/mol) approximately mass of water\n",
     "distinguishedParticleMass = 3 * particlemass # (kg)\n",
     "particleDiameter = 0.3 # (nm)\n",
     "separationDistance = 2 * particleDiameter # minimum separation distance for initial condition\n",
     "# For computations, we assume KbT=1, thus the force F must be: F=KbT f, where f is the force computed\n",
     "# from the potential. This means the plotted potential is on reduced units (not the distances though);\n",
-    "KbT = 1\n",
+    "KbT = 0.0000\n",
     "\n",
     "# Main parameters for integrator\n",
-    "dt = 0.005 #0.001 #0.0005 # (ns)\n",
+    "dt = 0.005 #0.005 #0.001 #0.0005 # (ns)\n",
     "seed = -1 # Seed = -1 used random device as seed\n",
     "bodytype = 'point'\n",
     "\n",
@@ -90,7 +90,7 @@
     "scalefactor = 75\n",
     "\n",
     "# Simulation parameters\n",
-    "tfinal = 50.0\n",
+    "tfinal = 10 #50.0 #50.0\n",
     "timesteps = int(tfinal/dt) \n",
     "bufferSize = 100 * 1024\n",
     "stride = 5 \n",
@@ -100,7 +100,7 @@
     "outputEnergyTempTrajectory = True\n",
     "trajtype = \"positionVelocityDistinguished\" # Samples position and velocity of distinguished particle (type 1) + raux variables\n",
     "distinguishedTypes = [1] # Only saves positions of particle with these types\n",
-    "equilibrationSteps = 2000"
+    "equilibrationSteps = 0 #2000"
    ]
   },
   {
@@ -144,14 +144,14 @@
     "potentialWCA.setForceCapValue(100)\n",
     "\n",
     "# Define external potential\n",
-    "externalPotential = gaussians3D(minimas, standardDevs, distinguishedTypes, scalefactor)\n",
+    "#externalPotential = gaussians3D(minimas, standardDevs, distinguishedTypes, scalefactor)\n",
     "\n",
     "# Integrator definition\n",
     "seed = int(-1) \n",
     "integrator = langevin(dt, seed, bodytype)\n",
     "integrator.setBoundary(boxBoundary)\n",
     "integrator.setPairPotential(potentialWCA)\n",
-    "integrator.setExternalPotential(externalPotential)\n",
+    "#integrator.setExternalPotential(externalPotential)\n",
     "integrator.setKbT(KbT)\n",
     "\n",
     "# Creates simulation\n",
@@ -164,6 +164,47 @@
     "\n",
     "sim.run(partlist, timesteps, stride, bufferSize, basefilename, outTxt, outH5, outChunked, trajtype)\n",
     "print(\"Simulation done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#potentialWCA.setForceCapValue(0.1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potentialWCA.getPotentialCapValue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#potentialWCA = WCA(epsilon, sigma)\n",
+    "rr = 2**(1/6)\n",
+    "drr = rr/2000\n",
+    "part1 = msmrd2.particle(0,0,0,0, [0,0,0], [1,0,0,0])\n",
+    "part2 = msmrd2.particle(0,0,0,0, [0.9063881040098023,0,0], [1,0,0,0])\n",
+    "np.linalg.norm(potentialWCA.forceTorque(part1,part2)[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potentialWCA.evaluate(part1,part2)"
    ]
   },
   {
@@ -192,11 +233,23 @@
     "# Plot energy and temperature\n",
     "time = dataET[:,0]\n",
     "time = time - time[0]\n",
-    "energy = dataET[:,1]\n",
-    "temperature = dataET[:,2]\n",
-    "plt.plot(time, energy)\n",
+    "kineticEnergy = dataET[:,1]\n",
+    "potentialEnergy = dataET[:,2]\n",
+    "totalEnergy = dataET[:,3]\n",
+    "temperature = dataET[:,4]\n",
+    "plt.plot(time, totalEnergy)\n",
+    "plt.plot(time, kineticEnergy)\n",
     "plt.xlabel('time(ns)')\n",
     "plt.ylabel('energy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(time, potentialEnergy)"
    ]
   },
   {
@@ -238,6 +291,15 @@
     "positiony = data[:,2]\n",
     "positionz = data[:,3]\n",
     "plt.plot(positionx, positionz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NEED TO CHECK UNITS OF KINETIC ENERGY. AT THE MOMENT KINETIC ENERGY DOMINATES COMPLETELY THE SUMS OF THE ENERGIES\n"
    ]
   },
   {
