--- a/examples/tests/plotEnergyTemperature.ipynb
+++ b/examples/tests/plotEnergyTemperature.ipynb
@@ -60,17 +60,18 @@
     "# Main parameters\n",
     "numBathParticles = 100 \n",
     "numparticles = 1 + numBathParticles #Added distinguished particle (index 0)\n",
-    "D = 3.0E-2 #3.0E-2 #3.0E-2 #1.0E-3 #(nm^2/ns) Note 1.0E-3 nm^2/ns = 1 micrometer^2/s #0.1\n",
+    "D = 3.0E-2 #3.0E-2 #1.0E-3 #(nm^2/ns) Note 1.0E-3 nm^2/ns = 1 micrometer^2/s #0.1\n",
+    "Gamma = 0 #1.0/D # Friction coefficient, units of KbT * ns/nm^2 = g/mol *(1/ns)(mass/time)\n",
     "particlemass = 18.0 # (g/mol) approximately mass of water\n",
     "distinguishedParticleMass = 3 * particlemass # (kg)\n",
     "particleDiameter = 0.3 # (nm)\n",
     "separationDistance = 2 * particleDiameter # minimum separation distance for initial condition\n",
     "# For computations, we assume KbT=1, thus the force F must be: F=KbT f, where f is the force computed\n",
     "# from the potential. This means the plotted potential is on reduced units (not the distances though);\n",
-    "KbT = 0.01\n",
+    "KbT = 0.0\n",
     "\n",
     "# Main parameters for integrator\n",
-    "dt = 0.05 #0.005 #0.001 #0.0005 # (ns)\n",
+    "dt = 0.0005 #0.005 #0.001 #0.0005 # (ns)\n",
     "seed = -1 # Seed = -1 used random device as seed\n",
     "bodytype = 'point'\n",
     "\n",
@@ -90,7 +91,7 @@
     "scalefactor = 75\n",
     "\n",
     "# Simulation parameters\n",
-    "tfinal = 50 #50.0 #50.0\n",
+    "tfinal = 5 #50.0 #50.0\n",
     "timesteps = int(tfinal/dt) \n",
     "bufferSize = 100 * 1024\n",
     "stride = 5 \n",
@@ -100,7 +101,7 @@
     "outputEnergyTempTrajectory = True\n",
     "trajtype = \"positionVelocityDistinguished\" # Samples position and velocity of distinguished particle (type 1) + raux variables\n",
     "distinguishedTypes = [1] # Only saves positions of particle with these types\n",
-    "equilibrationSteps = 2000"
+    "equilibrationSteps = 0 #2000"
    ]
   },
   {
@@ -130,7 +131,7 @@
     "# Run one simulation and saves data on H5 file\n",
     "\n",
     "# Define particle list\n",
-    "partlist = particleTools.randomLangevinParticleList(numparticles, boxsize, separationDistance, D,\n",
+    "partlist = particleTools.randomLangevinParticleList(numparticles, boxsize, separationDistance, 0.0,\n",
     "                                                    particlemass, seed, distinguishedParticleOrigin=True)\n",
     "# Set distinguished particle (default type is zero)\n",
     "partlist[0].setType(1)\n",
@@ -144,14 +145,14 @@
     "potentialWCA.setForceCapValue(100)\n",
     "\n",
     "# Define external potential\n",
-    "externalPotential = gaussians3D(minimas, standardDevs, distinguishedTypes, scalefactor)\n",
+    "#externalPotential = gaussians3D(minimas, standardDevs, distinguishedTypes, scalefactor)\n",
     "\n",
     "# Integrator definition\n",
     "seed = int(-1) \n",
-    "integrator = langevin(dt, seed, bodytype)\n",
+    "integrator = langevin(dt, seed, bodytype, Gamma)\n",
     "integrator.setBoundary(boxBoundary)\n",
     "integrator.setPairPotential(potentialWCA)\n",
-    "integrator.setExternalPotential(externalPotential)\n",
+    "#integrator.setExternalPotential(externalPotential)\n",
     "integrator.setKbT(KbT)\n",
     "\n",
     "# Creates simulation\n",
@@ -198,7 +199,7 @@
     "temperature = dataET[:,4]\n",
     "plt.plot(time, totalEnergy, '-k', label = \"total energy\")\n",
     "plt.plot(time, kineticEnergy, label = \"kinetic energy\")\n",
-    "#plt.plot(time, potentialEnergy, label = \"potential energy\")\n",
+    "plt.plot(time, potentialEnergy, label = \"potential energy\")\n",
     "plt.legend()\n",
     "plt.xlabel('time(ns)')\n",
     "plt.ylabel('energy')"
