--- a/examples/models/langevin.ipynb
+++ b/examples/models/langevin.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import numpy as np\n",
     "import msmrd2\n",
-    "from msmrd2.integrators import langevin "
+    "from msmrd2.integrators import langevinBAOAB"
    ]
   },
   {
@@ -58,8 +58,9 @@
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.001\n",
     "seed = -1 # Seed = -1 used random device as seed\n",
+    "Gamma = 1.0/D\n",
     "bodytype = 'point'\n",
-    "integrator = langevin(dt, seed, bodytype) "
+    "integrator = langevinBAOAB(dt, seed, bodytype, Gamma) "
    ]
   },
   {
