--- a/examples/models/langevinLennardJones.ipynb
+++ b/examples/models/langevinLennardJones.ipynb
@@ -19,7 +19,7 @@
     "import matplotlib.pyplot as plt\n",
     "import msmrd2\n",
     "import msmrd2.visualization as msmrdvis\n",
-    "from msmrd2.integrators import langevin \n",
+    "from msmrd2.integrators import langevinBAOAB\n",
     "from msmrd2.potentials import lennardJones"
    ]
   },
@@ -74,7 +74,8 @@
     "dt = 0.0005\n",
     "seed = -1 # Seed = -1 used random device as seed\n",
     "bodytype = 'point'\n",
-    "integrator = langevin(dt, seed, bodytype) "
+    "Gamma = 1.0/D\n",
+    "integrator = langevinBAOAB(dt, seed, bodytype, Gamma) "
    ]
   },
   {
