--- a/examples/tests/plotEnergyTemperature.ipynb
+++ b/examples/tests/plotEnergyTemperature.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import msmrd2\n",
-    "from msmrd2.integrators import langevin\n",
+    "from msmrd2.integrators import langevinBAOAB, langevinABOBA, langevinSemiImplicitEuler\n",
     "from msmrd2.potentials import WCA, gaussians3D\n",
     "import msmrd2.tools.particleTools as particleTools\n",
     "import msmrd2.tools.analysis as analysisTools\n",
@@ -61,14 +61,14 @@
     "numBathParticles = 100 \n",
     "numparticles = 1 + numBathParticles #Added distinguished particle (index 0)\n",
     "D = 3.0E-2 #3.0E-2 #1.0E-3 #(nm^2/ns) Note 1.0E-3 nm^2/ns = 1 micrometer^2/s #0.1\n",
-    "Gamma = 0 #1.0/D # Friction coefficient, units of KbT * ns/nm^2 = g/mol *(1/ns)(mass/time)\n",
+    "Gamma = 0.0 #1.0/D # Friction coefficient, units of KbT * ns/nm^2 = g/mol *(1/ns)(mass/time)\n",
     "particlemass = 18.0 # (g/mol) approximately mass of water\n",
     "distinguishedParticleMass = 3 * particlemass # (kg)\n",
     "particleDiameter = 0.3 # (nm)\n",
     "separationDistance = 2 * particleDiameter # minimum separation distance for initial condition\n",
     "# For computations, we assume KbT=1, thus the force F must be: F=KbT f, where f is the force computed\n",
     "# from the potential. This means the plotted potential is on reduced units (not the distances though);\n",
-    "KbT = 0.0\n",
+    "KbT = 0.0 #1.0\n",
     "\n",
     "# Main parameters for integrator\n",
     "dt = 0.0005 #0.005 #0.001 #0.0005 # (ns)\n",
@@ -91,7 +91,7 @@
     "scalefactor = 75\n",
     "\n",
     "# Simulation parameters\n",
-    "tfinal = 5 #50.0 #50.0\n",
+    "tfinal = 2.0 #50.0 #50.0\n",
     "timesteps = int(tfinal/dt) \n",
     "bufferSize = 100 * 1024\n",
     "stride = 5 \n",
@@ -149,7 +149,9 @@
     "\n",
     "# Integrator definition\n",
     "seed = int(-1) \n",
-    "integrator = langevin(dt, seed, bodytype, Gamma)\n",
+    "#integrator = langevinABOBA(dt, seed, bodytype, Gamma)\n",
+    "integrator = langevinBAOAB(dt, seed, bodytype, Gamma)\n",
+    "#integrator = langevinSemiImplicitEuler(dt, seed, bodytype, Gamma)\n",
     "integrator.setBoundary(boxBoundary)\n",
     "integrator.setPairPotential(potentialWCA)\n",
     "#integrator.setExternalPotential(externalPotential)\n",
@@ -197,12 +199,15 @@
     "potentialEnergy = dataET[:,2]\n",
     "totalEnergy = dataET[:,3]\n",
     "temperature = dataET[:,4]\n",
-    "plt.plot(time, totalEnergy, '-k', label = \"total energy\")\n",
+    "plt.rcParams['figure.figsize'] = (8,5)\n",
+    "plt.rcParams['font.size'] = 22\n",
+    "plt.plot(time, totalEnergy, '--k', lw = 3, label = \"total energy\")\n",
     "plt.plot(time, kineticEnergy, label = \"kinetic energy\")\n",
     "plt.plot(time, potentialEnergy, label = \"potential energy\")\n",
     "plt.legend()\n",
-    "plt.xlabel('time(ns)')\n",
-    "plt.ylabel('energy')"
+    "plt.xlabel('time '+r'$(ns)$')\n",
+    "plt.ylabel('energy 'r'$(k_BT)$');\n",
+    "#plt.savefig('energyTestPlot.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -211,16 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(time, potentialEnergy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(time, temperature)\n",
+    "plt.plot(time, temperature, label = 'temperature')\n",
     "plt.xlabel('time(ns)')\n",
     "plt.ylabel('temperature')"
    ]
@@ -252,16 +248,7 @@
     "positionx = data[:,1]\n",
     "positiony = data[:,2]\n",
     "positionz = data[:,3]\n",
-    "plt.plot(positionx, positionz)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NEED TO CHECK UNITS OF KINETIC ENERGY. AT THE MOMENT KINETIC ENERGY DOMINATES COMPLETELY THE SUMS OF THE ENERGIES\n"
+    "plt.plot(positionx, positionz, '.')"
    ]
   },
   {
