Updated langevin particle constructor

--- a/examples/models/langevin.ipynb
+++ b/examples/models/langevin.ipynb
@@ -27,15 +27,14 @@
    "outputs": [],
    "source": [
     "# Particles definition (diffusion coefficients, initial configurations)\n",
-    "D = 1\n",
     "particleMass = 1.0\n",
     "position = np.array([1,1,1])\n",
     "position2 = np.array([2,2,2])\n",
     "velocity = np.array([0.05,0,0])\n",
     "velocity2 = np.array([-0.05,0,0])\n",
     "# Note particles for Langevin use different constructor specifications\n",
-    "part1 = msmrd2.particle(D, position, velocity, particleMass)\n",
-    "part2 = msmrd2.particle(D, position2, velocity2, particleMass)"
+    "part1 = msmrd2.particle(position, velocity, particleMass)\n",
+    "part2 = msmrd2.particle(position2, velocity2, particleMass)"
    ]
   },
   {
@@ -58,7 +57,7 @@
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.001\n",
     "seed = -1 # Seed = -1 used random device as seed\n",
-    "Gamma = 1.0/D\n",
+    "Gamma = 1.0\n",
     "bodytype = 'point'\n",
     "integrator = langevinBAOAB(dt, seed, bodytype, Gamma) "
    ]
