--- a/examples/tests/plotEnergyTemperature.ipynb
+++ b/examples/tests/plotEnergyTemperature.ipynb
@@ -36,7 +36,7 @@
     "# - Energy ($\\epsilon$) : $k_B T = g/mol \\frac{nm^2}{ns^2}$\n",
     "# - Mass (m): gram/mol (g/mol)\n",
     "#\n",
-    "# ### Derived units\n",
+    "# ### Derived unitshttps://mail.yahoo.com/d/folders/1/messages/119349?reason=invalid_cred\n",
     "# - Time: $l\\sqrt{m/\\epsilon} = ns$\n",
     "# - Temperature: $\\epsilon/k_B =$ Kelvin ($K$)\n",
     "# - Force: $\\epsilon/l = kg \\frac{nm}{ns^2}$\n",
