--- a/examples/models/langevinWCA.ipynb
+++ b/examples/models/langevinWCA.ipynb
@@ -33,7 +33,6 @@
     "np.random.seed(seed=1)\n",
     "numparticles = 500\n",
     "boxsize = 25\n",
-    "D = 0.1\n",
     "mass = 1.0\n",
     "velocity = np.zeros(3)\n",
     "pyPartlist = [] \n",
@@ -49,7 +48,7 @@
     "                overlap = True\n",
     "                continue\n",
     "                \n",
-    "    part = msmrd2.particle(D, position, velocity, mass)\n",
+    "    part = msmrd2.particle(position, velocity, mass)\n",
     "    pyPartlist.append(part)"
    ]
   },
@@ -74,7 +73,7 @@
     "dt = 0.0005\n",
     "seed = -1 # Seed = -1 used random device as seed\n",
     "bodytype = 'point'\n",
-    "Gamma = 1.0/D\n",
+    "Gamma = 10.0\n",
     "integrator = langevinBAOAB(dt, seed, bodytype, Gamma) "
    ]
   },
