fixed minor bug in LJ potential

--- a/examples/models/langevinDimerWCA.ipynb
+++ b/examples/models/langevinDimerWCA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Langevin bistble dimer with WCA potentials\n",
+    "# Langevin bistable dimer with WCA potentials\n",
     "\n",
     "Simple implementation of a bistable dimer in a reservoir with particles interacting through WCA potentials"
    ]
@@ -171,15 +171,6 @@
     "    print('{:<10d}{:<10f}{:<40s}{:<50s}'.format(i, integrator.clock, str(partlist[0].position), str(partlist[0].velocity)))\n",
     "    print('{:<10s}{:<10s}{:<40s}{:<50s}'.format(str(\" \"), str(\" \"), str(partlist[1].position), str(partlist[1].velocity)))\n",
     "    integrator.integrate(partlist)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Calculate and plot potential\n",
-    "\n",
-    "Plots the Lennard jones potential for a set of given parameters:"
    ]
   },
   {
