--- a/examples/tests/readH5.ipynb
+++ b/examples/tests/readH5.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import h5py\n",
     "import numpy as np\n",
+    "import os\n",
     "np.set_printoptions(threshold=np.inf)"
    ]
   },
@@ -22,8 +23,9 @@
     "#filename = '../../data/patchyProtein/benchmark/simPatchyProtein_0018.h5'\n",
     "#filename = '../../data/testPatchyProtein/benchmark/simPatchyProtein_0076_discrete.h5'\n",
     "#filename = '../../data/testPatchyProtein/benchmark_t6E6_s25_new_equaldiff/simPatchyProtein_0078.h5'\n",
-    "filename = '../../data/patchyProtein/benchmark/simPatchyProtein_0258.h5'\n",
-    "\n",
+    "#filename = '../../data/patchyProtein/benchmark/simPatchyProtein_0258.h5'\n",
+    "#filename = '../../data/MAPK/benchmark_kinase/simMAPK_0000.h5'\n",
+    "filename = os.environ.get('DATA') + 'stochasticClosure/dimer/boxsize8/benchmark/simMoriZwanzig_0000.h5'\n",
     "\n",
     "f = h5py.File(filename, 'r')\n",
     "\n",
@@ -45,6 +47,15 @@
    "outputs": [],
    "source": [
     "a = np.array(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[0:10]"
    ]
   },
   {
@@ -90,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a[5]"
+    "data[0:10]"
    ]
   },
   {
@@ -171,13 +182,6 @@
     "for i in range(200):\n",
     "    print(i, dtraj[dtraj==i].size)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
