Added deterministic version of Mori-Zwanzig

--- a/examples/applications/Mori-Zwanzig/Mori-Zwanzig-Deterministic.ipynb
+++ b/examples/applications/Mori-Zwanzig/Mori-Zwanzig-Deterministic.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simulation for Mori-Zwanzig formalism\n",
+    "# Simulation for Mori-Zwanzig formalism (deterministic)\n",
     "\n",
-    " We implement a Langevin integrator with WCA potential to model the dynamics of a bath of particles together with a distinguished particle."
+    " We implement a Langevin integrator with WCA potential to model the dynamics of a bath of particles together with a distinguished particle without any noise (Actually Hamilton equations using an ABOBA algorithm without noise)"
    ]
   },
   {
@@ -19,7 +19,7 @@
     "import matplotlib.pyplot as plt\n",
     "import msmrd2\n",
     "import msmrd2.visualization as msmrdvis\n",
-    "from msmrd2.integrators import langevinBAOAB \n",
+    "from msmrd2.integrators import integratorMoriZwanzigDeterministic \n",
     "from msmrd2.potentials import WCA, harmonic\n",
     "import msmrd2.tools.particleTools as particleTools"
    ]
@@ -64,18 +64,21 @@
     "Gamma = 0.3 #30 # Friction coefficient (units of KbT/D = mass over time (gram/mol)/ns)\n",
     "particlemass = 18.0 # (g/mol) approximately mass of H20\n",
     "distinguishedParticleMass = 3 * particlemass # (kg)\n",
+    "distinguishedTypes = [1]\n",
+    "\n",
     "numSimulations = 500 #250 #500\n",
     "boxsize = 8\n",
     "particleDiameter = 0.3 #nm\n",
     "separationDistance = 2*particleDiameter # minimum separation distance for initial condition\n",
     "# For computations, we assume KbT=1, thus the force F must be: F=KbT f, where f is the force computed\n",
     "# from the potential. This means the plotted potential is on reduced units (not the distances though);\n",
-    "KbT = 1\n",
+    "KbT = 0.01\n",
+    "sigmavel=2*KbT*Gamma\n",
     "seed = -1 # Seed = -1 used random device as seed\n",
     "\n",
     "# Define arbitrarily large list of particles (velocities assumed zero at initial position)\n",
-    "partlist = particleTools.randomLangevinParticleList(numparticles, boxsize, separationDistance, \n",
-    "                                                        particlemass, seed, distinguishedParticleOrigin=True)\n",
+    "partlist = particleTools.randomLangevinParticleVelocityList(numparticles, boxsize, separationDistance,sigmavel,\n",
+    "                                                        particlemass, seed, distinguishedParticleOrigin=False)\n",
     "# Set distinguished particle (default type is zero)\n",
     "partlist[0].setType(1)\n",
     "partlist[0].setMass(distinguishedParticleMass)"
@@ -91,8 +94,7 @@
     "dt = 0.05 #0.2\n",
     "seed = -1 # Seed = -1 used random device as seed\n",
     "bodytype = 'point'\n",
-    "integratorScheme = 'ABOBA' # BAOAB default\n",
-    "integrator = langevinBAOAB(dt, seed, bodytype, Gamma) \n",
+    "integrator = integratorMoriZwanzigDeterministic(dt, seed, bodytype, Gamma) \n",
     "integrator.setKbT(KbT)"
    ]
   },
@@ -105,7 +107,8 @@
     "# Define boundary (choose either spherical or box)\n",
     "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'periodic')\n",
     "#boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
-    "integrator.setBoundary(boxBoundary)"
+    "integrator.setBoundary(boxBoundary)\n",
+    "integrator.setDistinguishedTypes(distinguishedTypes)"
    ]
   },
   {
@@ -121,7 +124,7 @@
     "forceCapVal = 100.0\n",
     "potentialWCA = WCA(epsilon, sigma)\n",
     "potentialWCA.setForceCapValue(forceCapVal)\n",
-    "integrator.setPairPotential(potentialWCA)"
+    "integrator.setAuxPairPotential(potentialWCA) # Aux so it can be saved into aux variable"
    ]
   },
   {
@@ -148,7 +151,7 @@
     "# Integrate the particles, save to .xyz to produce VMD output (additional overhead)\n",
     "timesteps = 2000\n",
     "stride = 5\n",
-    "datafile  = open('../../../data/vmd/MoriZwanzig.xyz', 'w')\n",
+    "datafile  = open('../../../data/vmd/MoriZwanzigDeterministic.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
     "        datafile.write(str(len(partlist)) + '\\n')\n",
@@ -174,8 +177,8 @@
    "outputs": [],
    "source": [
     "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_MoriZwanzig(numparticles = numparticles, outfname = \"MoriZwanzig\", \n",
-    "                              tclfname = \"../../../data/vmd/MoriZwanzig_2vmd.tcl\", \n",
+    "msmrdvis.generateTCL_MoriZwanzig(numparticles = numparticles, outfname = \"MoriZwanzigDeterministic\", \n",
+    "                              tclfname = \"../../../data/vmd/MoriZwanzigDeterministic_2vmd.tcl\", \n",
     "                                 particleDiameter = particleDiameter)"
    ]
   },
@@ -205,68 +208,6 @@
     "    print('{:<10s}{:<10s}{:<40s}{:<50s}'.format(str(\" \"), str(\" \"), str(partlist[1].position), str(partlist[1].velocity)))\n",
     "    integrator.integrate(partlist)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Calculate and plot potential\n",
-    "\n",
-    "Plots the Lennard jones potential for a set of given parameters:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Redefine potential\n",
-    "epsilon = 1\n",
-    "rm = 1.0\n",
-    "sigma = rm * 2**(-1/6)\n",
-    "cutOff = 5\n",
-    "potentialWCA = WCA(epsilon, sigma)\n",
-    "\n",
-    "# Construct evaluate function\n",
-    "def WCAevaluate(r):\n",
-    "    p1 = np.zeros(3)\n",
-    "    p2 = np.array([r,0,0])\n",
-    "    vel = np.zeros(3)\n",
-    "    part1 = msmrd2.particle(1.0, p1, vel, 1)\n",
-    "    part2 = msmrd2.particle(1.0, p2, vel, 1)\n",
-    "    return potentialWCA.evaluate(part1, part2)\n",
-    "\n",
-    "rarray = np.linspace(0.1,5,100)\n",
-    "V_WCA = [WCAevaluate(r) for r in rarray]\n",
-    "plt.plot(rarray, V_WCA)\n",
-    "plt.xlabel(\"Distance r\")\n",
-    "plt.ylabel(\"WCA potential\")\n",
-    "plt.ylim([-1.5,3])\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check force values at close distance (to choose force cap value)\n",
-    "p1 = np.zeros(3)\n",
-    "p2 = np.array([0.85,0,0])\n",
-    "vel = np.zeros(3)\n",
-    "part1 = msmrd2.particle(1.0, p1, vel, 1)\n",
-    "part2 = msmrd2.particle(1.0, p2, vel, 1)\n",
-    "potentialWCA.forceTorque(part1,part2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
